Mon Feb  2 12:41:52 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* complex.c (f_signbit): regard NaN as a positive value.
	  [ruby-dev:37861].

Mon Feb  2 12:39:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sample/test.rb (valid_syntax?), test/ruby/test_system.rb
	  (TestSystem::valid_syntax?): use catch and throw instead of
	  return inside BEGIN block.

Mon Feb  2 11:45:10 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (cmsg_type_arg): declared.
	  (Init_ancdata): ditto.

	* ext/socket/init.c (Init_socket_init): call Init_ancdata.

	* ext/socket/constants.c (cmsg_type_arg): defined.

	* ext/socket/depend: add dependency for ancdata.o.

	* ext/socket/mkconstants.rb: generate scm_optname_to_int.
	  more constants.

	* ext/socket/extconf.rb: add ancdata.o.

	* ext/socket/ancdata.c: new file.  new method
	  BasicSocket#{sendmsg,sendmsg_nonblock,recvmsg,recvmsg_nonblock}

Mon Feb  2 10:57:27 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (open_dir_handle, rb_w32_opendir, move_to_next_entry,
	  rb_w32_readdir, check_valid_dir): change backend API from A to W.

Mon Feb  2 10:48:38 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_setsockopt): accept Socket::Option
	  object.
	  (bsock_getsockopt): return Socket::Option object.

	* ext/socket/option.c: new file.

	* ext/socket/rubysocket.h (rb_cSockOpt): declared.
	  (sockopt_new): ditto.
	  (Init_sockopt): ditto.

	* ext/socket/init.c (Init_socket_init): call Init_sockopt.

	* ext/socket/depend: add dependency for option.o

	* ext/socket/mkconstants.rb: generate intern_level, intern_so_optname,
	  intern_ip_optname, intern_ipv6_optname, intern_tcp_optname,
	  intern_udp_optname and intern_scm_optname.

	* ext/socket/extconf.rb: add option.o.

Mon Feb  2 09:49:39 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_backtrace_each): progname is not available at
	  initializing phase.

Mon Feb  2 08:12:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
